changed kie.bom dependency to be fix

--- a/kie-parent-with-dependencies/pom.xml
+++ b/kie-parent-with-dependencies/pom.xml
@@ -67,7 +67,7 @@
         <groupId>org.kie</groupId>
         <artifactId>kie-bom</artifactId>
         <type>pom</type>
-        <version>${project.version}</version>
+        <version>${drools.version}</version>
         <scope>import</scope>
       </dependency>
       <dependency>
